# GoodByeDPI-Turkey-RustWithGui

./: .gitignore  Cargo.toml  README.md  README_EN.md  run.bat
.github/workflows/: release.yml
configs/: blacklist.txt  minimal.toml  preset-5-dns.toml  preset-5.toml  preset-9-dns.toml  turkey.toml  whitelist.txt
crates/gdpi-cli/: Cargo.toml
crates/gdpi-cli/src/: args.rs  main.rs
crates/gdpi-cli/src/commands/: config.rs  filter.rs  mod.rs  run.rs  service.rs
crates/gdpi-core/: Cargo.toml
crates/gdpi-core/src/: error.rs  lib.rs
crates/gdpi-core/src/config/: mod.rs
crates/gdpi-core/src/conntrack/: mod.rs  tcp.rs
crates/gdpi-core/src/filter/: domain_filter.rs  mod.rs
crates/gdpi-core/src/packet/: builder.rs  parser.rs  types.rs
crates/gdpi-core/src/pipeline/: context.rs  mod.rs
crates/gdpi-core/src/strategies/: dns_redirect.rs  mod.rs  quic_block.rs
crates/gdpi-core/tests/: conntrack_tests.rs  strategies_tests.rs
crates/gdpi-gui/: Cargo.toml
crates/gdpi-gui/src/: app.rs  config.rs  main.rs  service.rs  tray.rs
crates/gdpi-platform/src/: error.rs  installer.rs  lib.rs  traits.rs
crates/gdpi-platform/src/windows/: driver.rs  mod.rs
crates/gdpi-service/src/: lib.rs  service.rs
v2/: Cargo.toml  README.md  stop.bat
v2/.github/workflows/: ci.yml
v2/configs/: maximum.toml  preset-9.toml  superonline-dns.toml  superonline.toml  turkey.toml
v2/crates/gdpi-cli/: Cargo.toml
v2/crates/gdpi-cli/src/: logging.rs  main.rs
v2/crates/gdpi-cli/src/commands/: completions.rs  driver.rs  mod.rs  run.rs  service.rs  test.rs
v2/crates/gdpi-core/src/: lib.rs
v2/crates/gdpi-core/src/config/: mod.rs  profile.rs
v2/crates/gdpi-core/src/conntrack/: dns.rs
v2/crates/gdpi-core/src/packet/: mod.rs  parser.rs  types.rs
v2/crates/gdpi-core/src/pipeline/: mod.rs
v2/crates/gdpi-core/src/strategies/: fake_packet.rs  fragment.rs  header_mangle.rs
v2/crates/gdpi-core/tests/: config_tests.rs  packet_tests.rs
v2/crates/gdpi-platform/: Cargo.toml
v2/crates/gdpi-platform/src/: installer.rs  lib.rs
v2/crates/gdpi-platform/src/windows/: driver.rs  filter.rs  mod.rs
v2/crates/gdpi-service/: Cargo.toml
v2/crates/gdpi-service/src/: service.rs
