[workspace]
resolver = "2"
members = [
    "crates/gdpi-core",
    "crates/gdpi-platform",
    "crates/gdpi-cli",
    "crates/gdpi-service",
    "crates/gdpi-gui",
]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["GoodbyeDPI-Turkey Contributors"]
license = "Apache-2.0"
repository = "https://github.com/Andronovo-bit/GoodByeDPI-Turkey-RustWithGui"
homepage = "https://github.com/Andronovo-bit/GoodByeDPI-Turkey-RustWithGui"
description = "Deep Packet Inspection circumvention utility for Turkey"
readme = "README.md"
keywords = ["dpi", "bypass", "network", "packet", "turkey"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
gdpi-core = { path = "crates/gdpi-core" }
gdpi-platform = { path = "crates/gdpi-platform" }
gdpi-service = { path = "crates/gdpi-service" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive", "env", "string"] }

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Network utilities
socket2 = { version = "0.5", features = ["all"] }
pnet = "0.34"
pnet_packet = "0.34"

# Windows specific
winapi = { version = "0.3", features = [
    "winsock2", "ws2def", "ws2ipdef", "iphlpapi",
    "processthreadsapi", "synchapi", "handleapi",
    "errhandlingapi", "winbase", "winerror",
    "minwindef", "ntdef", "winnt",
    "winsvc", "libloaderapi"
] }

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
bytes = "1.5"
bitflags = "2.4"
hex = "0.4"
rand = "0.8"

# Testing
criterion = "0.5"
proptest = "1.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
