[package]
name = "gdpi-gui"
version = "0.1.0"
edition = "2021"
description = "System tray GUI for GoodbyeDPI Turkey"
authors = ["Andronovo-bit"]
license = "MIT"

[[bin]]
name = "goodbyedpi-gui"
path = "src/main.rs"

[dependencies]
# Core
gdpi-core = { path = "../gdpi-core" }

# Tray icon
tray-icon = "0.19"

# GUI toolkit
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"

# Image handling for tray icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[features]
default = []
